[package]
name = "senddb_cache"
description = "A caching proxy for SendDB focusing on efficiently checking if levels have been sent or not"
version = "1.1.1"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.50.0", features = ["full"] }
